# eiffel-tools

./: .gitignore  Cargo.toml  LICENSE.md  README.md  lsp-eiffel  workshop.md
eiffel-tools-lib/: Cargo.toml
eiffel-tools-lib/src/: code_entities.rs  config.rs  eiffel_source.rs  eiffelstudio_cli.rs  fix.rs  generators.rs  language_server_protocol.rs  lib.rs  parser.rs  workspace.rs
eiffel-tools-lib/src/code_entities/: class.rs  contract.rs  feature.rs  shared.rs
eiffel-tools-lib/src/code_entities/class/: model.rs  parent.rs
eiffel-tools-lib/src/code_entities/contract/: clause.rs
eiffel-tools-lib/src/code_entities/contract/blocks/: routine_specification.rs
eiffel-tools-lib/src/code_entities/contract/blocks/routine_specification/: postcondition.rs  precondition.rs
eiffel-tools-lib/src/code_entities/feature/: eiffel_type.rs  parameters.rs
eiffel-tools-lib/src/generators/: constructor_api.rs  prompt.rs
eiffel-tools-lib/src/generators/prompt/: class_prompt.rs  feature_prompt.rs  model_based_contracts.rs
eiffel-tools-lib/src/generators/prompt/feature_prompt/: add_model_based_contracts.rs  fix_feature.rs
eiffel-tools-lib/src/language_server_protocol/: commands.rs  notifications.rs  server_state.rs
eiffel-tools-lib/src/language_server_protocol/commands/: add_class_specification.rs  add_daikon_instrumentation.rs  add_routine_specification.rs  class_wide_feature_fixes.rs  fix_routine.rs  fix_routine_in_place.rs  modify_in_place.rs
eiffel-tools-lib/src/language_server_protocol/commands/add_daikon_instrumentation/: daikon_types.rs
eiffel-tools-lib/src/language_server_protocol/commands/tests/: command_mock.rs
eiffel-tools-lib/src/language_server_protocol/notifications/: did_save_text_document.rs  initialization.rs
eiffel-tools-lib/src/language_server_protocol/requests/: code_action.rs  document_symbol.rs  execute_command.rs  goto_definition.rs  initialize.rs  workspace_document_symbol.rs
eiffel-tools-lib/src/lib/: code_entities.rs  eiffel_source.rs  fix.rs
eiffel-tools-lib/src/lib/code_entities/: class.rs
eiffel-tools-lib/src/lib/code_entities/class/: parent.rs
eiffel-tools-lib/src/lib/code_entities/contract/blocks/: routine_specification.rs
eiffel-tools-lib/src/lib/code_entities/contract/blocks/routine_specification/: postcondition.rs
eiffel-tools-lib/src/lib/code_entities/feature/: eiffel_type.rs
eiffel-tools-lib/src/lib/generators/: constructor_api.rs  prompt.rs
eiffel-tools-lib/src/lib/language_server_protocol/: commands.rs  requests.rs
eiffel-tools-lib/src/lib/language_server_protocol/commands/: add_routine_specification.rs  fix_routine.rs
eiffel-tools-lib/src/lib/language_server_protocol/commands/add_daikon_instrumentation/: daikon_types.rs
eiffel-tools-lib/src/lib/language_server_protocol/notifications/: did_save_text_document.rs  initialization.rs
eiffel-tools-lib/src/lib/language_server_protocol/requests/: document_symbol.rs
eiffel-tools-lib/src/lib/parser/: class_tree.rs
eiffel-tools-lib/src/lib/parser/class_tree/: contract_tree.rs  feature_tree.rs  inheritance_tree.rs  notes_tree.rs
eiffel-tools-lib/src/parser/: class_tree.rs  expression_tree.rs  util.rs
eiffel-tools-lib/src/parser/class_tree/: contract_tree.rs  eiffel_type.rs  feature_tree.rs  inheritance_tree.rs  notes_tree.rs
eiffel-tools-lib/src/parser/class_tree/feature_tree/: parameter_tree.rs
experiment-results/: anonymized-maple-recursive-eiffel.patch
experiments/: data.txt  test.py  upload_files.py
gemini/: Cargo.toml
gemini/src/: lib.rs  model.rs  request.rs  response.rs
gemini/src/lib/: model.rs  request.rs  response.rs
gemini/src/lib/request/config/: schema.rs
gemini/src/request/: config.rs
gemini/src/request/config/: schema.rs
gemini_macro_derive/: Cargo.toml
gemini_macro_derive/src/: lib.rs
llm-correct-classes/: Cargo.toml
llm-correct-classes/src/: main.rs
llm-correct-features/: Cargo.toml
llm-correct-features/src/: main.rs
llm-correct-list-classes/: Cargo.toml
llm-correct-list-classes/src/: main.rs
python-experiments/: data.txt  prompt.txt  system_message.txt  test.py
remove-comments/: Cargo.toml
remove-comments/src/: main.rs
src/: lib.rs  main.rs
src/lib/: code_entities.rs  config.rs  eiffel.rs  eiffel_source.rs  eiffelstudio_cli.rs  file_processor.rs  fix.rs  gemini.rs  generator.rs  generators.rs  language_server_protocol.rs  new_eiffel_source.rs  new_workspace.rs  parser.rs  processed_file.rs  transformer.rs  tree_sitter.rs  tree_sitter_extension.rs  workspace.rs
src/lib/code_entities/: class.rs  contract.rs  feature.rs  new_class.rs  new_feature.rs  positioning.rs  shared.rs
src/lib/code_entities/class/: model.rs
src/lib/code_entities/contract/: blocks.rs  clause.rs
src/lib/code_entities/feature/: eiffel_type.rs  notes.rs  parameters.rs
src/lib/code_entities/new_class/: new_ancestor.rs
src/lib/code_entities/positioning/: utils.rs
src/lib/gemini/: model.rs  request.rs  response.rs
src/lib/gemini/request/: config.rs
src/lib/generator/: constructor_api.rs  prompt.rs
src/lib/generators/: constructor_api.rs  post_processing.rs  prompt.rs
src/lib/generators/prompt/: model_based_contracts.rs
src/lib/language_server_protocol/: code_action.rs  commands.rs  common.rs  document_symbol.rs  hover.rs  initialization.rs  notifications.rs  prelude.rs  requests.rs  router.rs  server_state.rs  workspace_document_symbol.rs
src/lib/language_server_protocol/code_action/: transformer.rs
src/lib/language_server_protocol/commands/: add_class_specification.rs  add_daikon_instrumentation.rs  add_routine_specification.rs  command_mock.rs  fix_routine.rs
src/lib/language_server_protocol/notifications/: did_save_text_document.rs  initialization.rs
src/lib/language_server_protocol/requests/: code_action.rs  document_symbol.rs  execute_command.rs  goto_definition.rs  hover.rs  initialize.rs  (+1 more)
src/lib/parser/: class_tree.rs  expression_tree.rs  util.rs
src/lib/transformer/: constructor_api.rs  gemini.rs  ollama.rs  prompt.rs
test-parsing/: Cargo.toml
test-parsing/src/: main.rs
(+18 files in other folders)
