[workspace]
resolver = "3"
members = ["eiffel-tools-lib", "llm-correct-features", "llm-correct-classes", "test-parsing"]

[package]
name = "eiffel-tools"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc="*"

[dependencies]
# Error management
anyhow = "1.0"

# Asyncronous runtime (framework for lsp is built upon this)
tokio = { version = "1.27", features = ["full"] }

# Lib
eiffel-tools-lib = {version= "*", path="./eiffel-tools-lib"}
