[package]
name = "eiffel-tools-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error management
anyhow = "1.0"

# Framework for lsp
async-lsp = { version = "0.2.*", features = ["client-monitor", "omni-trait", "stdio", "tracing", "tokio"]}
streaming-iterator = { version = "0.1.9" }

# Asyncronous runtime (framework for lsp is built upon this)
tokio = { version = "1.27", features = ["full"] }

# Parallelism
rayon = "1.10.0"

# Service-based framework (framework for lsp is built upon this)
tower = "0.5.*"
tracing-subscriber = "0.3.*"
tracing = "0.1.*"

# Treesitter
tree-sitter = "0.24.2"
tree-sitter-eiffel = { git = "https://github.com/imustafin/tree-sitter-eiffel", branch = "lsp-adaptation"}
# tree-sitter-eiffel = { path = "/home/al_work/repos/tree-sitter-eiffel"}

# Parsing
serde = "1.0.*"
schemars = {version = "0.8.21"}

# Eiffel configuration
walkdir = "2"
shellexpand = {version = "3.1"}
quick-xml = {version = "0.37", features = ["serialize", "overlapped-lists"]}

# LLM
reqwest = {version = "0.12.*", features = ["json", "blocking"]}
serde_json = { version = "1.0" }

[dev-dependencies]
assert_fs = "1.1"

