[package]
name = "gemini"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
anyhow = "1.0"
async-lsp = { version = "0.2.*", features = ["client-monitor", "omni-trait", "stdio", "tracing", "tokio"]}
tokio = { version = "1.27", features = ["full"] }
tower = "0.5.*"
tracing-subscriber = "0.3.*"
tracing = "0.1.*"
# Gemini
reqwest = {version = "0.12.*", features = ["json"]}
serde = "1.0.*"
serde_json = { version = "1.0" }
serde-xml-rs = { version = "0.6" }
gemini_macro_derive = {path = "../gemini_macro_derive"}
